# podcast

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
mirror/: Makefile  Package.swift
mirror/Sources/: ContentView.swift  MirrorWindowManager.swift  MirrorWindowView.swift  ScreenCaptureManager.swift  main.swift
pipeline/: README.md  main.py  pyproject.toml
pipeline/pipeline/: __init__.py  cli.py  config.py  frame.py  resource.py
pipeline/tests/: test_cli_processing.py  test_frame_destination_resolution.py  test_resource_alignment.py
