[project]
name = "pipeline"
version = "0.1.0"
description = "Podcast ingest pipeline for grouping, moving, and transcoding session files."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "frameioclient>=1.1.0",
    "pydantic-settings>=2.12.0",
    "rich>=13.7.0",
    "urllib3<2",
    "vaultdantic",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
